fixed floats on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -351,11 +351,13 @@ figcaption {
   margin: 20px;
 }
 .float-left {
+  float: none;
   width: 100%;
   padding: 5px;
 }
 
 .float-right {
+  float: none;
   width: 100%;
   padding: 5px;
 }
